Some plays with domain models